src/styles/generated-font.css
/* Generated by scripts/subset-font.mjs from 46 baseline config/interface files. Frozen-interface Corpus sha256:2c3a4b35a6a766d33a096ada04b10ae9ca17ba72a05cd35b9d0a047f9ff6781b. System-stack fallback: U+2084. */
@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-28-900-normal.woff2") format("woff2");
  unicode-range: U+951A;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-40-900-normal.woff2") format("woff2");
  unicode-range: U+8517;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-47-900-normal.woff2") format("woff2");
  unicode-range: U+7BE1;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-54-900-normal.woff2") format("woff2");
  unicode-range: U+7425;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-57-900-normal.woff2") format("woff2");
  unicode-range: U+70F7;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-59-900-normal.woff2") format("woff2");
  unicode-range: U+6DC6;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-69-900-normal.woff2") format("woff2");
  unicode-range: U+60F0;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-90-900-normal.woff2") format("woff2");
  unicode-range: U+2082,U+2194,U+21CC;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-91-900-normal.woff2") format("woff2");
  unicode-range: U+207A-207B;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-99-900-normal.woff2") format("woff2");
  unicode-range: U+A7;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-101-900-normal.woff2") format("woff2");
  unicode-range: U+6E32;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-102-900-normal.woff2") format("woff2");
  unicode-range: U+6C22,U+94C2;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-103-900-normal.woff2") format("woff2");
  unicode-range: U+60,U+6EAF,U+7194,U+73C0;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-104-900-normal.woff2") format("woff2");
  unicode-range: U+2462,U+78B1,U+950C;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-105-900-normal.woff2") format("woff2");
  unicode-range: U+5E,U+5256;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-106-900-normal.woff2") format("woff2");
  unicode-range: U+6D3D,U+6EB6,U+77DB,U+903B,U+98A0;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-107-900-normal.woff2") format("woff2");
  unicode-range: U+5339,U+5F25,U+64CE,U+6A61,U+6DC0,U+78B3,U+94DD;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-108-900-normal.woff2") format("woff2");
  unicode-range: U+24,U+50AC,U+52FE,U+76FE,U+7BAD,U+9AA4;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-109-900-normal.woff2") format("woff2");
  unicode-range: U+2192,U+533F,U+5FAA,U+5FFD,U+68AF,U+6C27,U+76D0,U+7C92,U+8D2F,U+8FC1,U+94DC;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-110-900-normal.woff2") format("woff2");
  unicode-range: U+300C-300D,U+5141,U+517C,U+5242,U+62D6,U+65CB,U+6846,U+6CBF,U+6EDA,U+6F0F,U+73BB,U+7483,U+7ED1,U+8017,U+819C,U+8377,U+8986,U+8BCA,U+8D8B,U+8E2A,U+8F68,U+9A71;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-111-900-normal.woff2") format("woff2");
  unicode-range: U+4FA7,U+500D,U+504F,U+586B,U+58A8,U+59D3,U+5B54,U+5F31,U+5F84,U+5FBD,U+6052,U+63E1,U+68D2,U+6C60,U+6CE1,U+6E10,U+7070,U+71C3,U+8584,U+8861,U+8DE8,U+8F85,U+9178,U+9636;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-112-900-normal.woff2") format("woff2");
  unicode-range: U+23,U+3D,U+4ECD,U+50A8,U+5224,U+5360,U+56FA,U+574F,U+635F,U+638C,U+6563,U+6697,U+675F,U+67D3,U+6865,U+6C89,U+6DB2,U+6DF7,U+70E7,U+7126,U+7532,U+7CD6,U+7ED8,U+7F18,U+7F29,U+89E6,U+8D25,U+8DDD,U+9010,U+91CA,U+9634,U+9694,U+9ED8;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-113-900-normal.woff2") format("woff2");
  unicode-range: U+26,U+3C,U+5012,U+51B2,U+51B7,U+521A,U+5220,U+523B,U+552F,U+5750,U+5B88,U+5BDF,U+5EF6,U+6258,U+63D2,U+642D,U+6682,U+6982,U+6DFB,U+706F,U+76D6,U+786C,U+79D2,U+7A33,U+7A3F,U+7B26,U+7EC3,U+7F3A,U+811A,U+821E,U+8349,U+86CB,U+8BAD,U+8BEF,U+8BFE,U+8DF3,U+8F6E,U+8FF9,U+900F,U+9057,U+9488,U+955C,U+964D,U+96F7,U+9759,U+989C,U+9F50;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-114-900-normal.woff2") format("woff2");
  unicode-range: U+2026,U+4E25,U+4E45,U+4EAE,U+4F9D,U+51CF,U+538B,U+53E6,U+5426,U+542B,U+542F,U+5757,U+57DF,U+591C,U+591F,U+5A01,U+5C42,U+5DEE,U+5E8F,U+5F02,U+5F52,U+6279,U+63CF,U+677E,U+67B6,U+68C0,U+6BCD,U+6C47,U+73ED,U+7565,U+76AE,U+7981,U+7A81,U+7B14,U+7EAF,U+7EB8,U+7EE7,U+805A,U+822C,U+82CF,U+82E5,U+84DD,U+878D,U+8C01,U+8C08,U+8D1F,U+8DDF,U+8F93,U+8FF0,U+8FFD,U+9000,U+9047,U+9152,U+949F,U+94C1,U+94F6,U+969C,U+987B;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-115-900-normal.woff2") format("woff2");
  unicode-range: U+25,U+4E14,U+4E49,U+4EC5,U+4EFD,U+4F8B,U+5145,U+5199,U+51B3,U+5207,U+5219,U+52BF,U+5347,U+534A,U+53F2,U+547D,U+54CD,U+54EA,U+56F4,U+5747,U+5883,U+589E,U+5931,U+5B83,U+5C1A,U+5C40,U+5C5E,U+5E95,U+5F85,U+601D,U+62C9,U+6309,U+6545,U+65AD,U+666E,U+677F,U+6781,U+6790,U+6821,U+6838-6839,U+6B62,U+6D4B,U+6EE1,U+6F14,U+72B6,U+72EC,U+7387,U+753B,U+76D8,U+7701,U+79BB,U+79EF,U+79FB,U+7B54,U+7B56,U+7D20,U+7EC8,U+7EDD,U+7EED,U+7EFC,U+8303,U+89C9,U+89D2,U+8C61,U+8F83,U+8F91,U+8FB9,U+9519,U+95ED,U+9633,U+968F,U+9884,U+9988,U+FF1B;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-116-900-normal.woff2") format("woff2");
  unicode-range: U+2B,U+40,U+4E92,U+4E9B,U+4EC0,U+4F18,U+4F46,U+4F4E,U+4F9B,U+4FEE,U+503C,U+50CF,U+5148,U+518D,U+51C6,U+51E0,U+5217,U+529F,U+5361,U+5386,U+53C2,U+53CC,U+53D7-53D8,U+53EA,U+5411,U+5417,U+5668,U+56E0,U+57FA,U+5904,U+59CB,U+5B58,U+5E08,U+5E2E,U+5F15,U+5F3A,U+5F62,U+5F69,U+5F8B,U+5FC5,U+600E,U+627E,U+628A,U+62A4,U+62E9,U+6307,U+6362,U+636E,U+6539,U+653F,U+6548,U+6574,U+663E,U+672A,U+6750,U+6784,U+6A21,U+6B65,U+6BCF,U+6DF1,U+706B,U+73AF,U+754C,U+7559,U+767D,U+7740,U+786E,U+79F0,U+7AEF,U+7B7E,U+7EA2,U+7EA6,U+7EC4,U+7EF4,U+81F4,U+89C2,U+89C8,U+8BB8,U+8BC6,U+8BD5,U+8BED,U+8C03,U+8DB3,U+8FBE,U+8FD1,U+8FDE,U+914D,U+91C7,U+94FE,U+952E,U+9645,U+9664,U+9700,U+9752,U+975E,U+9879,U+9A8C;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-117-900-normal.woff2") format("woff2");
  unicode-range: U+4E,U+4E24,U+4E48,U+4E5F,U+4E8B-4E8C,U+4EA4,U+4ECB,U+4ECE,U+4EF6-4EF7,U+4EFB,U+4F20,U+4F55,U+4F7F,U+4FDD,U+505A,U+5143,U+5149,U+5171,U+5177,U+51FB,U+522B,U+52A9,U+5355,U+5373,U+539F,U+53BB,U+53CA,U+53CD,U+53D6,U+53E3,U+53F0,U+56DB,U+573A,U+578B,U+590D,U+5934,U+5B57,U+5B8C,U+5BB9,U+5BFC,U+5C06,U+5C11,U+5C31,U+5C55,U+5DF2,U+5E03,U+5E38,U+5E76,U+5E94,U+5EFA,U+5F71,U+5F97,U+6001,U+603B,U+60F3,U+6216,U+624D,U+6301,U+6392,U+652F,U+653E,U+6559,U+6599,U+671F,U+6761,U+67E5,U+6807,U+6837,U+683C,U+6848,U+6B64,U+6BD4,U+6C14,U+6C34,U+6C42,U+6CA1,U+6D41,U+6D88,U+6E05,U+6E38,U+6E90,U+7136,U+7531,U+767E,U+76EE,U+76F4,U+771F,U+7801,U+793A,U+79CD,U+7A0B,U+7A7A,U+7ACB,U+7B2C,U+7B80,U+7CBE,U+7EA7,U+7ED3,U+7ED9,U+7EDF,U+7F16,U+7F6E,U+8001,U+800C,U+8272,U+8282,U+88AB,U+88C5,U+89C4,U+89E3,U+8A00,U+8BA1,U+8BA4,U+8BB0,U+8BBE,U+8BC1,U+8BC4,U+8BFB,U+8D28,U+8D77,U+8D85,U+8DEF,U+8EAB,U+8F6C,U+8F7D,U+8FD0,U+9009,U+90FD,U+91CC-91CD,U+91CF,U+9650,U+96C6,U+9891,U+FF1F;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-118-900-normal.woff2") format("woff2");
  unicode-range: U+3E,U+5F,U+7C,U+4E09-4E0B,U+4E0D-4E0E,U+4E2A,U+4E3A,U+4E4B,U+4E86,U+4E8E,U+4EA7,U+4EBA,U+4EE5,U+4EEC,U+4F1A,U+4F4D,U+4F53,U+4F5C,U+4F60,U+5165,U+5168,U+516C,U+5173,U+5176,U+5185,U+51FA,U+5206,U+5230,U+5236,U+524D,U+529B,U+52A0,U+52A8,U+5316,U+533A,U+53D1,U+53EF,U+53F7,U+5408,U+540C-540E,U+548C,U+56DE,U+56FE,U+5728,U+5730,U+5907,U+5916,U+591A,U+5927,U+597D,U+5982,U+5B50,U+5B66,U+5B9A,U+5B9E,U+5BF9,U+5C0F,U+5DE5,U+5E73,U+5EA6,U+5F00,U+5F0F,U+5F53,U+5F55,U+5FAE,U+6027,U+60C5,U+610F,U+6210-6211,U+6240,U+624B,U+63A5,U+63A8,U+63D0,U+6536,U+6570,U+6587,U+65B9,U+65E0,U+65F6,U+660E,U+662F,U+6700,U+672C,U+673A,U+6743,U+6765,U+679C,U+6B21,U+6B63,U+6CD5,U+6CE8,U+6D3B,U+70ED,U+7247-7248,U+7269,U+73B0,U+7406,U+751F,U+7528,U+7535,U+76F8,U+770B,U+77E5,U+7B49,U+7C7B,U+7CFB,U+7EBF,U+7ECF,U+8005,U+8054,U+80FD,U+81EA,U+884C,U+8868,U+8981,U+89C6,U+8BDD,U+8BF4,U+8BF7,U+8FC7,U+8FD8-8FD9,U+8FDB,U+901A,U+9053,U+90E8,U+91D1,U+95EE,U+95F4,U+9762,U+9875,U+9898,U+9AD8,U+FF08-FF09;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-119-900-normal.woff2") format("woff2");
  unicode-range: U+20-22,U+27-2A,U+2C-3B,U+3F,U+41-4D,U+4F-5D,U+61-7B,U+7D,U+B2,U+B7,U+2013-2014,U+3001-3002,U+4E00,U+4E2D,U+65B0,U+6709,U+70B9,U+7684,U+FF0C,U+FF1A;
}

@font-face {
  font-family: "Source Han Serif SC";
  font-style: normal;
  font-display: swap;
  font-weight: 900;
  src: url("../fonts/noto-serif-sc-latin-900-normal.woff2") format("woff2");
  unicode-range: U+20-7D,U+A7,U+B2,U+B7,U+2013-2014,U+2026;
}

